--- a/package.json
+++ b/package.json
@@ -6,8 +6,15 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "better-react-mathjax": "^2.0.1",
+    "draft-js": "^0.11.7",
+    "mathjax-react": "^1.0.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-draft-wysiwyg": "^1.14.7",
+    "react-latex": "^2.0.0",
+    "react-mathjax": "^1.0.1",
+    "react-mathjax2": "^0.0.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
